# Refactoring-Katas

./: .gitignore
GildedRose/cpp/: CMakeLists.txt  Doxyfile.in  GildedRose.cc  GildedRose.h  GildedRoseTest.cc  GildedRoseUnitTests.cc  Item.h  README  build.sh
